@@ -2,7 +2,7 @@ from django.contrib.auth.models import User
 
 from allauth.socialaccount.providers.oauth2.views import (OAuth2Adapter,
                                                           OAuth2LoginView,
-                                                          OAuth2CompleteView)
+                                                          OAuth2CallbackView)
 from allauth.socialaccount import requests
 
 from allauth.socialaccount.models import SocialAccount, SocialLogin
@@ -15,9 +15,9 @@ class GitHubOAuth2Adapter(OAuth2Adapter):
     authorize_url = 'https://github.com/login/oauth/authorize'
     profile_url = 'https://api.github.com/user'
 
-    def complete_login(self, request, app, access_token):
+    def complete_login(self, request, app, token):
         resp = requests.get(self.profile_url,
-                            params={ 'access_token': access_token })
+                            params={ 'access_token': token.token })
         extra_data = resp.json
         uid = str(extra_data['id'])
         user = User(username=extra_data.get('login', ''),
@@ -31,5 +31,5 @@ class GitHubOAuth2Adapter(OAuth2Adapter):
 
 
 oauth2_login = OAuth2LoginView.adapter_view(GitHubOAuth2Adapter)
-oauth2_complete = OAuth2CompleteView.adapter_view(GitHubOAuth2Adapter)
+oauth2_callback = OAuth2CallbackView.adapter_view(GitHubOAuth2Adapter)
 
